cambios en la documentacion en el tag /products
