# api/routes/productsRoutes.js
@@ -12,7 +12,7 @@ router.get('/search',productsController.busqueda);
 
 router.get('/:id',productsController.detalle);
 
-router.post('/',dataValidation ,productsController.crear);
+router.post('/', dataValidation ,productsController.crear);
 
 router.delete('/:id',productsController.eliminar);
 
